MessageBox: fix rendering issue when zoomed
There is a small gap between the message box content and the box buttons
if windows zoom is set to 125%. The height values are correct, seems to
be a Chrome bug -> set background color of the message box.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/messagebox/MessageBox.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/messagebox/MessageBox.less
@@ -18,6 +18,7 @@
   min-width: 200px;
   max-width: @messagebox-max-width;
   #scout.drop-shadow-large();
+  background-color: @messagebox-background-color;
   border-top: 5px solid @active-color;
   border-radius: @border-radius;
   margin: 10px; /* minimum padding to desktop */
@@ -66,7 +67,7 @@
   min-height: 30px;
   border-left: 1px solid @boxbutton-border-color;
   border-right: 1px solid @boxbutton-border-color;
-  background-color: @control-background-color;
+  background-color: @messagebox-background-color;
   padding: (26px - @messagebox-label-padding) / 2 26px 26px 26px;
 
   /* add a bit of extra space to the scrollbar on the right */
