--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/colors.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/style/colors.less
@@ -189,6 +189,7 @@
 @menubar-button-font-icon-color: @menubar-button-color;
 @menubar-button-font-icon-disabled-color: @menubar-button-disabled-border-color;
 @menubar-item-color: @text-color;
+@messagebox-background-color: @control-background-color;
 @navigate-up-button-border-color: @menubar-button-border-color;
 @navigate-up-button-color: @menubar-button-color;
 @navigation-background-color: @palette-blue-6;
